--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Checkout 
+        name: checkout 
         uses: actions/checkout@v2
       -
         name: Login to Docker Hub
