--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: checkout 
+        name: Checkout 
         uses: actions/checkout@v2
       -
         name: Login to Docker Hub
@@ -26,4 +26,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: VitalyaShev/proig:latest
+          tags: vitalyashev/proig:latest
